--- a/Carousel/src/components/carousel/carousel.css
+++ b/Carousel/src/components/carousel/carousel.css
@@ -1,43 +1,63 @@
-.CarouselContainer {
+.carouselContainer {
 	display: flex;
 	flex-flow: column nowrap;
+	width: 50rem;
+	padding-bottom: 2vh;
 	margin: 1rem;
+	background-color: navajowhite;
 }
 
-.TitleContainer {
+.titleContainer {
 	display: flex;
 	flex-flow: row nowrap;
 	justify-content: center;
 	align-items: center;
-	font-size: 5rem;
+	font-size: 3rem;
 	font-weight: bold;
 	margin: 1rem;
 }
 
-.ContentContainer {
+.contentContainer {
 	display: flex;
-	flex-flow: row nowrap;
-	justify-content: space-between;
-	width: 90vw;
-	max-width: 896px;
-	height: 30vh;
 }
 
-.ImageContainer {
-	display: flex;
-	align-items: center;
+.slideBox {
+	max-width: 50rem;
+	width: 100%;
+	margin: 0 auto;
 	overflow: hidden;
-	width: 90vw;
-	height: 30vh;
 }
 
-.SlideContainer {
-	display: flex;
-	width: 90vw;
+.slideList {
+	white-space: nowrap;
+	font-size: 0;
+	padding: 0;
 }
 
-.ImageItem {
-	width: 80vw;
-	margin: 0 10vw 0 10vw;
-	height: 30vh;
+.slideItem {
+	display: inline-block;
+	vertical-align: middle;
+	width: 100%;
+	height: 100%;
+	list-style: none;
+	margin: 0;
+	padding: 0;
+}
+
+.image {
+	width: 100%;
+	height: 100%;
+}
+
+.slideBtn {
+	background-color: unset;
+	border: 0px;
+	font-size: 3rem;
+	padding: 0 2vw;
+	cursor: pointer;
+}
+
+.slideBtn:hover {
+	transition: all 0.5s;
+	transform: scale(1.1);
 }
