DOCS: modal 표준에 맞게 에러 수정, 버튼 클릭에 입력값 연결

--- a/Modal/src/components/molecules/Modal/Modal.module.css
+++ b/Modal/src/components/molecules/Modal/Modal.module.css
@@ -15,6 +15,7 @@
 
 .ModalMainShow {
   display: flex;
+  flex-flow: column nowrap;
   justify-content: center;
   align-items: center;
   position: absolute;
@@ -43,6 +44,7 @@
 
 .ModalMainBlindIng {
   display: flex;
+  flex-flow: column nowrap;
   justify-content: center;
   align-items: center;
   position: absolute;
