--- a/Modal/src/components/atoms/Input/Input.module.css
+++ b/Modal/src/components/atoms/Input/Input.module.css
@@ -1,11 +1,12 @@
-.Textarea {
+.Input {
   font-size: large;
   letter-spacing: 1px;
   border: none;
   outline: none;
   box-sizing: border-box;
-  margin: 1vh 1vw;
-  width: 80%;
+  margin: 1vh 0;
+  padding: 0 0.5vw;
+  width: 50%;
   resize: none;
-  line-height: 1.5rem;
+  line-height: 2rem;
 }
