--- a/Modal/src/components/molecules/Modal/Modal.module.css
+++ b/Modal/src/components/molecules/Modal/Modal.module.css
@@ -92,3 +92,10 @@
   transition: all 1s;
   border-radius: 1rem;
 }
+
+.FormContainer {
+  display: flex;
+  flex-flow: column nowrap;
+  align-items: center;
+  width: 100%;
+}
